// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Rocket rendering check 1`] = `
<div
  className="rocket"
>
  <img
    alt="Fal"
    className="img"
    src="https//image1.com"
  />
  <div
    className="rocket-dis"
  >
    <h1
      className="rocket-name"
    >
      Fal
    </h1>
    <div
      className="pharagraph"
    >
      <p>
        <span
          className="reservedText"
        >
          Reserved
        </span>
        <span
          className="description"
        >
          The best
        </span>
      </p>
    </div>
    <button
      className="btnsecond"
      onClick={[Function]}
      type="submit"
      value={true}
    >
      Cancel Reservation
    </button>
  </div>
</div>
`;

exports[`Rocket rendering check 2`] = `
<div
  className="rocket"
>
  <img
    alt="Et24"
    className="img"
    src="https//image2.com"
  />
  <div
    className="rocket-dis"
  >
    <h1
      className="rocket-name"
    >
      Et24
    </h1>
    <div
      className="pharagraph"
    >
      <p>
        <span
          className="reservedText"
        >
          Reserved
        </span>
        <span
          className="description"
        >
          The second besr
        </span>
      </p>
    </div>
    <button
      className="btnsecond"
      onClick={[Function]}
      type="submit"
      value={true}
    >
      Cancel Reservation
    </button>
  </div>
</div>
`;
